Assignments/Assignment2/src/main/bkit/parser/.antlr/BKITParser.py
# Generated from c:\Users\ASUS\Desktop\201\PPL\Assignments\Assignment2\src\main\bkit\parser\BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "':'", "','", "'['", "']'", "'{'", 
                     "'}'", "'('", "')'", "'.'", "'Body'", "'Break'", "'Continue'", 
                     "'Do'", "'Else'", "'ElseIf'", "'EndBody'", "'EndIf'", 
                     "'EndFor'", "'EndWhile'", "'For'", "'Function'", "'If'", 
                     "'Parameter'", "'Return'", "'Var'", "'Then'", "'While'", 
                     "'True'", "'False'", "'EndDo'", "'+'", "'-'", "'*'", 
                     "'\\'", "'%'", "'=='", "'!='", "'<'", "'>'", "'<='", 
                     "'>='", "'+.'", "'-.'", "'*.'", "'\\.'", "'=/='", "'<.'", 
                     "'>.'", "'<=.'", "'>=.'", "'&&'", "'!'", "'||'", "'='" ]

    symbolicNames = [ "<INVALID>", "SEMI", "COLON", "COMMA", "LSB", "RSB", 
                      "LCP", "RCP", "LP", "RP", "DOT", "BODY", "BREAK", 
                      "CONTINUE", "DO", "ELSE", "ELSE_IF", "END_BODY", "END_IF", 
                      "END_FOR", "END_WHILE", "FOR", "FUNC", "IF", "PARAMETER", 
                      "RETURN", "VAR", "THEN", "WHILE", "TRUE", "FALSE", 
                      "END_DO", "INT_ADD", "INT_SUB", "INT_MUL", "INT_DIV", 
                      "INT_MOD", "INT_EQ", "INT_NEQ", "INT_LT", "INT_GT", 
                      "INT_LTE", "INT_GTE", "FLOAT_ADD", "FLOAT_SUB", "FLOAT_MUL", 
                      "FLOAT_DIV", "FLOAT_NEQ", "FLOAT_LT", "FLOAT_GT", 
                      "FLOAT_LTE", "FLOAT_GTE", "AND", "NOT", "OR", "ASSIGN", 
                      "INTEGER_LITERAL", "FLOAT_LITERAL", "BOOLEAN_LITERAL", 
                      "STRING_LITERAL", "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ID", "COMMENT_LITERAL", "UNTERMINATED_COMMENT", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_var_declare = 1
    RULE_variable_assign_list = 2
    RULE_variable_assign = 3
    RULE_func_declare = 4
    RULE_param_declare = 5
    RULE_param_list = 6
    RULE_body = 7
    RULE_list_statement = 8
    RULE_statement = 9
    RULE_assignment_stmt = 10
    RULE_assign_body = 11
    RULE_assign_head = 12
    RULE_if_stmt = 13
    RULE_else_if_stmt = 14
    RULE_else_stmt = 15
    RULE_for_stmt = 16
    RULE_while_stmt = 17
    RULE_do_while_stmt = 18
    RULE_break_stmt = 19
    RULE_continue_stmt = 20
    RULE_call_stmt = 21
    RULE_return_stmt = 22
    RULE_func_call = 23
    RULE_exps_list = 24
    RULE_bool_literal = 25
    RULE_variable = 26
    RULE_array_type = 27
    RULE_literal = 28
    RULE_array_literal = 29
    RULE_exp = 30
    RULE_exp1 = 31
    RULE_exp2 = 32
    RULE_exp3 = 33
    RULE_exp4 = 34
    RULE_exp5 = 35
    RULE_index_exp = 36
    RULE_exp7 = 37
    RULE_exp8 = 38

    ruleNames =  [ "program", "var_declare", "variable_assign_list", "variable_assign", 
                   "func_declare", "param_declare", "param_list", "body", 
                   "list_statement", "statement", "assignment_stmt", "assign_body", 
                   "assign_head", "if_stmt", "else_if_stmt", "else_stmt", 
                   "for_stmt", "while_stmt", "do_while_stmt", "break_stmt", 
                   "continue_stmt", "call_stmt", "return_stmt", "func_call", 
                   "exps_list", "bool_literal", "variable", "array_type", 
                   "literal", "array_literal", "exp", "exp1", "exp2", "exp3", 
                   "exp4", "exp5", "index_exp", "exp7", "exp8" ]

    EOF = Token.EOF
    SEMI=1
    COLON=2
    COMMA=3
    LSB=4
    RSB=5
    LCP=6
    RCP=7
    LP=8
    RP=9
    DOT=10
    BODY=11
    BREAK=12
    CONTINUE=13
    DO=14
    ELSE=15
    ELSE_IF=16
    END_BODY=17
    END_IF=18
    END_FOR=19
    END_WHILE=20
    FOR=21
    FUNC=22
    IF=23
    PARAMETER=24
    RETURN=25
    VAR=26
    THEN=27
    WHILE=28
    TRUE=29
    FALSE=30
    END_DO=31
    INT_ADD=32
    INT_SUB=33
    INT_MUL=34
    INT_DIV=35
    INT_MOD=36
    INT_EQ=37
    INT_NEQ=38
    INT_LT=39
    INT_GT=40
    INT_LTE=41
    INT_GTE=42
    FLOAT_ADD=43
    FLOAT_SUB=44
    FLOAT_MUL=45
    FLOAT_DIV=46
    FLOAT_NEQ=47
    FLOAT_LT=48
    FLOAT_GT=49
    FLOAT_LTE=50
    FLOAT_GTE=51
    AND=52
    NOT=53
    OR=54
    ASSIGN=55
    INTEGER_LITERAL=56
    FLOAT_LITERAL=57
    BOOLEAN_LITERAL=58
    STRING_LITERAL=59
    WS=60
    UNCLOSE_STRING=61
    ILLEGAL_ESCAPE=62
    ID=63
    COMMENT_LITERAL=64
    UNTERMINATED_COMMENT=65
    ERROR_CHAR=66

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def var_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_declareContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_declareContext,i)


        def func_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Func_declareContext)
            else:
                return self.getTypedRuleContext(BKITParser.Func_declareContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_program




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 78
                self.var_declare()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.FUNC:
                self.state = 84
                self.func_declare()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 90
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def variable_assign_list(self):
            return self.getTypedRuleContext(BKITParser.Variable_assign_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_var_declare




    def var_declare(self):

        localctx = BKITParser.Var_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_var_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(BKITParser.VAR)
            self.state = 93
            self.match(BKITParser.COLON)

            self.state = 94
            self.variable_assign_list()
            self.state = 95
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_assign_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_assign(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Variable_assignContext)
            else:
                return self.getTypedRuleContext(BKITParser.Variable_assignContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_variable_assign_list




    def variable_assign_list(self):

        localctx = BKITParser.Variable_assign_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variable_assign_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.variable_assign()
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 98
                self.match(BKITParser.COMMA)
                self.state = 99
                self.variable_assign()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_assignContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(BKITParser.VariableContext,0)


        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def literal(self):
            return self.getTypedRuleContext(BKITParser.LiteralContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_variable_assign




    def variable_assign(self):

        localctx = BKITParser.Variable_assignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variable_assign)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.variable()
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.ASSIGN:
                self.state = 106
                self.match(BKITParser.ASSIGN)
                self.state = 107
                self.literal()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(BKITParser.FUNC, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def body(self):
            return self.getTypedRuleContext(BKITParser.BodyContext,0)


        def param_declare(self):
            return self.getTypedRuleContext(BKITParser.Param_declareContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_func_declare




    def func_declare(self):

        localctx = BKITParser.Func_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_func_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(BKITParser.FUNC)
            self.state = 111
            self.match(BKITParser.COLON)
            self.state = 112
            self.match(BKITParser.ID)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.PARAMETER:
                self.state = 113
                self.param_declare()


            self.state = 116
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARAMETER(self):
            return self.getToken(BKITParser.PARAMETER, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def param_list(self):
            return self.getTypedRuleContext(BKITParser.Param_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_param_declare




    def param_declare(self):

        localctx = BKITParser.Param_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_param_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(BKITParser.PARAMETER)
            self.state = 119
            self.match(BKITParser.COLON)
            self.state = 120
            self.param_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.VariableContext)
            else:
                return self.getTypedRuleContext(BKITParser.VariableContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_param_list




    def param_list(self):

        localctx = BKITParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_param_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.variable()
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 123
                self.match(BKITParser.COMMA)
                self.state = 124
                self.variable()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def list_statement(self):
            return self.getTypedRuleContext(BKITParser.List_statementContext,0)


        def END_BODY(self):
            return self.getToken(BKITParser.END_BODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_body




    def body(self):

        localctx = BKITParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(BKITParser.BODY)
            self.state = 131
            self.match(BKITParser.COLON)
            self.state = 132
            self.list_statement()
            self.state = 133
            self.match(BKITParser.END_BODY)
            self.state = 134
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_declareContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_declareContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.StatementContext)
            else:
                return self.getTypedRuleContext(BKITParser.StatementContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_list_statement




    def list_statement(self):

        localctx = BKITParser.List_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_list_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 136
                self.var_declare()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 145
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 142
                    self.statement() 
                self.state = 147
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment_stmt(self):
            return self.getTypedRuleContext(BKITParser.Assignment_stmtContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(BKITParser.If_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(BKITParser.For_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(BKITParser.While_stmtContext,0)


        def do_while_stmt(self):
            return self.getTypedRuleContext(BKITParser.Do_while_stmtContext,0)


        def break_stmt(self):
            return self.getTypedRuleContext(BKITParser.Break_stmtContext,0)


        def continue_stmt(self):
            return self.getTypedRuleContext(BKITParser.Continue_stmtContext,0)


        def call_stmt(self):
            return self.getTypedRuleContext(BKITParser.Call_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(BKITParser.Return_stmtContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_statement




    def statement(self):

        localctx = BKITParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 148
                self.assignment_stmt()
                pass

            elif la_ == 2:
                self.state = 149
                self.if_stmt()
                pass

            elif la_ == 3:
                self.state = 150
                self.for_stmt()
                pass

            elif la_ == 4:
                self.state = 151
                self.while_stmt()
                pass

            elif la_ == 5:
                self.state = 152
                self.do_while_stmt()
                pass

            elif la_ == 6:
                self.state = 153
                self.break_stmt()
                pass

            elif la_ == 7:
                self.state = 154
                self.continue_stmt()
                pass

            elif la_ == 8:
                self.state = 155
                self.call_stmt()
                pass

            elif la_ == 9:
                self.state = 156
                self.return_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assignment_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign_body(self):
            return self.getTypedRuleContext(BKITParser.Assign_bodyContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_assignment_stmt




    def assignment_stmt(self):

        localctx = BKITParser.Assignment_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_assignment_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.assign_body()
            self.state = 160
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_bodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign_head(self):
            return self.getTypedRuleContext(BKITParser.Assign_headContext,0)


        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def exp(self):
            return self.getTypedRuleContext(BKITParser.ExpContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_assign_body




    def assign_body(self):

        localctx = BKITParser.Assign_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_assign_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.assign_head()
            self.state = 163
            self.match(BKITParser.ASSIGN)
            self.state = 164
            self.exp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_headContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def index_exp(self):
            return self.getTypedRuleContext(BKITParser.Index_expContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_assign_head




    def assign_head(self):

        localctx = BKITParser.Assign_headContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_assign_head)
        try:
            self.state = 168
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 166
                self.match(BKITParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 167
                self.index_exp()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(BKITParser.IF, 0)

        def exp(self):
            return self.getTypedRuleContext(BKITParser.ExpContext,0)


        def THEN(self):
            return self.getToken(BKITParser.THEN, 0)

        def list_statement(self):
            return self.getTypedRuleContext(BKITParser.List_statementContext,0)


        def END_IF(self):
            return self.getToken(BKITParser.END_IF, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def else_if_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Else_if_stmtContext)
            else:
                return self.getTypedRuleContext(BKITParser.Else_if_stmtContext,i)


        def else_stmt(self):
            return self.getTypedRuleContext(BKITParser.Else_stmtContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_if_stmt

